infra/k8s/knative/deployment-workflow/triggermesh-core.yaml
# Copyright 2022 TriggerMesh Inc.
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Namespace
metadata:
  name: triggermesh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triggermesh-core-controller
  namespace: triggermesh
  labels:
    app.kubernetes.io/part-of: triggermesh
    app.kubernetes.io/version: devel
    app.kubernetes.io/component: core-controller
    app.kubernetes.io/name: triggermesh-eventing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: triggermesh-core-controller
  template:
    metadata:
      labels:
        app: triggermesh-core-controller
        app.kubernetes.io/part-of: triggermesh
        app.kubernetes.io/version: devel
        app.kubernetes.io/component: core-controller
        app.kubernetes.io/name: triggermesh-eventing
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: eventing-controller
                topologyKey: kubernetes.io/hostname
              weight: 100
      serviceAccountName: triggermesh-core-controller
      enableServiceLinks: false
      containers:
        - name: controller
          terminationMessagePolicy: FallbackToLogsOnError
          image: ${REGISTRY_ID}.dkr.ecr.us-east-1.amazonaws.com/core-controller:latest
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 200Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [all]
          ports:
            - name: metrics
              containerPort: 9090
            - name: profiling
              containerPort: 8008
