infra/k8s/knative/deployment-workflow/dind-deployment.yaml
# Reference: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker
spec:
  selector:
    matchLabels:
      app: docker
  template:
    metadata:
      labels:
        app: docker
    spec:
      containers:
      - name: docker
        image: this-is-replaced-on-ci
        ports:
        - containerPort: 8080
        securityContext:
          privileged: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/docker
          name: docker-graph-storage
      volumes:
      - name: docker-graph-storage
        emptyDir: {}

---
# Reference: https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: docker
spec:
  selector:
    app: docker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
