infra/k8s/knative/deployment-workflow/triggermesh_v2.yaml
# Copyright 2022 TriggerMesh Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  name: triggermesh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triggermesh-controller
  namespace: triggermesh
  labels:
    app.kubernetes.io/part-of: triggermesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: triggermesh-controller
  template:
    metadata:
      labels:
        app: triggermesh-controller
    spec:
      serviceAccountName: triggermesh-controller
      containers:
        - name: controller
          terminationMessagePolicy: FallbackToLogsOnError
          image: <aws-account-id>.dkr.ecr.us-east-1.amazonaws.com/triggermesh-controller:latest
          resources:
            requests:
              cpu: 50m
              memory: 150Mi
            limits:
              cpu: 200m
              memory: 500Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [all]
          ports:
            - name: metrics
              containerPort: 9090
            - name: profiling
              containerPort: 8008
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: defaulting.webhook.triggermesh.io
  labels:
    app.kubernetes.io/part-of: triggermesh
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: triggermesh-webhook
        namespace: triggermesh
    sideEffects: None
    failurePolicy: Fail
    name: defaulting.webhook.triggermesh.io
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.triggermesh.io
  labels:
    app.kubernetes.io/part-of: triggermesh
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: triggermesh-webhook
        namespace: triggermesh
    sideEffects: None
    failurePolicy: Fail
    name: validation.webhook.triggermesh.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triggermesh-webhook
  namespace: triggermesh
  labels:
    app.kubernetes.io/part-of: triggermesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: triggermesh-webhook
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'false'
      labels:
        app: triggermesh-webhook
    spec:
      serviceAccountName: triggermesh-webhook
      containers:
        - name: webhook
          terminationMessagePolicy: FallbackToLogsOnError
          image: <aws-account-id>.dkr.ecr.us-east-1.amazonaws.com/triggermesh-webhook:latest
          ports:
            - containerPort: 9090
              name: metrics
          # TODO set proper resource limits.
          readinessProbe:
            periodSeconds: 1
            httpGet:
              scheme: HTTPS
              port: 8443
              httpHeaders:
                - name: k-kubelet-probe
                  value: webhook
          livenessProbe:
            periodSeconds: 1
            httpGet:
              scheme: HTTPS
              port: 8443
              httpHeaders:
                - name: k-kubelet-probe
                  value: webhook
---
apiVersion: v1
kind: Service
metadata:
  name: triggermesh-webhook
  namespace: triggermesh
  labels:
    app.kubernetes.io/part-of: triggermesh
spec:
  ports:
    - name: https-webhook
      port: 443
      targetPort: 8443
  selector:
    app: triggermesh-webhook
